--- a/watch/Dockerfile
+++ b/watch/Dockerfile
@@ -1,6 +1,6 @@
 FROM ntrrg/md-linter
 COPY package.json /
 RUN npm install && npm cache clean --force
-COPY entrypoint.sh /
+ENV CONFIG_FILES="$CONFIG_FILES nodemon.json"
 VOLUME /files
 
